--- a/Main_ipad.storyboard
+++ b/Main_ipad.storyboard
@@ -597,7 +597,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="favoritesPrototypeCell" rowHeight="125" id="39648" customClass="FavoriteAircraftTableCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="favoritesPrototypeCell" rowHeight="125" id="39648" customClass="FavoriteAircraftTableCell">
                                         <rect key="frame" x="0.0" y="28" width="768" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="39648" id="39649">
@@ -1858,7 +1858,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kDf-sl-j3e">
-                                                    <rect key="frame" x="0.0" y="0.0" width="345" height="69"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="738" height="69"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42293">
                                                             <rect key="frame" x="15" y="21.5" width="300" height="25.5"/>
@@ -1876,7 +1876,7 @@
                                                             </variation>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="value" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42299">
-                                                            <rect key="frame" x="330" y="21.5" width="0.0" height="25.5"/>
+                                                            <rect key="frame" x="330" y="21.5" width="393" height="25.5"/>
                                                             <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="22"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <color key="highlightedColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -2662,7 +2662,7 @@
                                 <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="AircraftDetailsCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="spec_cell_button" rowHeight="70" id="JzK-p1-sxB" customClass="AircraftDetailsCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AircraftDetailsCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="spec_cell_button" rowHeight="70" id="JzK-p1-sxB" customClass="AircraftDetailsCell">
                                         <rect key="frame" x="0.0" y="55.5" width="738" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JzK-p1-sxB" id="DVY-wC-YuM">
@@ -2711,7 +2711,7 @@
                                             <outlet property="aircraftLabel" destination="GaL-yT-MuI" id="KvU-l7-Iyh"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="AircraftDetailsLabelCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="spec_cell_label" rowHeight="70" id="CzD-HQ-QIL" customClass="AircraftDetailsLabelCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AircraftDetailsLabelCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="spec_cell_label" rowHeight="70" id="CzD-HQ-QIL" customClass="AircraftDetailsLabelCell">
                                         <rect key="frame" x="0.0" y="125.5" width="738" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CzD-HQ-QIL" id="xAp-Y4-8tg">
